chore(be): update signup route with latest dto
