# backend/cmd/api/docs/swagger.json
@@ -499,7 +499,7 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/users.User"
+                    "$ref": "#/definitions/users.UserResponse"
                 }
             }
         },
@@ -565,32 +565,6 @@
                     "type": "boolean"
                 },
                 "timestamp": {
-                    "type": "string"
-                }
-            }
-        },
-        "users.User": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "email": {
-                    "description": "NOT NULL UNIQUE",
-                    "type": "string"
-                },
-                "id": {
-                    "description": "UUID",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "NOT NULL",
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
